--- a/benchmarks/NPB-SER/LU/Makefile
+++ b/benchmarks/NPB-SER/LU/Makefile
@@ -13,7 +13,9 @@ ${PROGRAM}: config ${OBJS}
 	${CLINK} ${CLINKFLAGS} -o ${PROGRAM} ${OBJS} ${C_LIB}
 
 lu.o:		lu.cpp npbparams.hpp
-	${CCOMPILE} lu.cpp
+	${CC} -S -c -emit-llvm -o lu.bc lu.cpp
+	$(OPT) -enable-new-pm=0 $(OPTFLAGS) -S -o lu.ll lu.bc
+	$(CC) -c lu.ll
 
 clean:
 	- /bin/rm -f npbparams.hpp
