--- a/benchmarks/lcals/Makefile
+++ b/benchmarks/lcals/Makefile
@@ -19,28 +19,7 @@
 #
 
 OPT_DEBUG = opt
-#OPT_DEBUG = debug
-
-#rzalastor
-#LCALS_ARCH = x86_sse_icc
-#LCALS_ARCH = x86_sse_gnu
-
-#rzmerl
-#LCALS_ARCH = x86_avx_icc
-#LCALS_ARCH = x86_avx_gnu
-
-#rzdawndev
-## This is still here for posterity...
-#LCALS_ARCH = bgp_xlc9
-
-#rzuseq
-#LCALS_ARCH = bgq_xlc12
 LCALS_ARCH = bgq_clang
-#LCALS_ARCH = bgq_gnu
-
-#rzmic
-#LCALS_ARCH = MIC
-
 
 ##
 ## The LCALS_rules.mk file defines macro variables that specify LCALS behavior.
@@ -62,217 +41,7 @@ include ./LCALS_rules.mk
 
 
 #
-#  MIC
-# 
-ifeq ($(LCALS_ARCH),MIC)
-CXX 		= icc
-
-ifeq ($(OPT_DEBUG),opt)
-CXX_COMPILE = $(CXX) -g -O3 -mmic -vec-report3  -inline-max-total-size=10000 -inline-forceinline -ansi-alias -std=c++0x -openmp
-LDFLAGS	=
-endif
-
-ifeq ($(OPT_DEBUG),debug)
-CXX_COMPILE = $(CXX) -g -mmic  -O0 -std=c++0x -openmp
-LDFLAGS	=
-endif
-
-CXXFLAGS	= -DLCALS_PLATFORM_X86_SSE -DLCALS_COMPILER_ICC
-LDPATH		=
-
-endif 
-
-
-#
-#  INTEL COMPILER (SSE 4.1) 
-# 
-ifeq ($(LCALS_ARCH),x86_sse_icc)
-#CXX 		= /usr/local/tools/icc-12.1.339/bin/icc
-#CXX 		= /usr/local/tools/ic-13.0.117/bin/icpc
-#CXX 		= /usr/local/tools/ic-13.0.146/bin/icc
-#CXX 		= /usr/local/tools/ic-13.1.163/bin/icpc
-#CXX 		= /usr/local/tools/ic-14.0.080/bin/icc
-#CXX 		= /usr/local/tools/ic-14.0.097/bin/icpc
-#CXX 		= /usr/local/tools/ic-14.0.106/bin/icpc
-
-ifeq ($(OPT_DEBUG),opt)
-#CXX_COMPILE = $(CXX) -O3 -msse4.1 -inline-max-total-size=10000 -inline-forceinline -opt-streaming-stores always -ansi-alias -std=c++0x -openmp
-CXX_COMPILE = $(CXX) -O3 -msse4.1 -inline-max-total-size=10000 -inline-forceinline -ansi-alias -std=c++0x -openmp
-#CXX_COMPILE = $(CXX) -O3 -msse4.1 -inline-max-total-size=10000 -inline-forceinline -ansi-alias -std=c++0x 
-LDFLAGS	=
-endif
-
-ifeq ($(OPT_DEBUG),debug)
-CXX_COMPILE = $(CXX) -g -O0 -std=c++0x -openmp
-LDFLAGS	=
-endif
-
-CXXFLAGS	= -DLCALS_PLATFORM_X86_SSE -DLCALS_COMPILER_ICC
-LDPATH		=
-
-endif 
-
-
-#
-#  GNU  COMPILER (SSE 4.1)
-# 
-ifeq ($(LCALS_ARCH),x86_sse_gnu)
-#CXX 		= /usr/local/bin/g++-4.4.6
-#CXX 		= /usr/local/bin/g++-4.6.1
-#CXX 		= /usr/apps/gnu/4.7.1/bin/g++
-#CXX 		= /usr/apps/gnu/4.8.0/bin/g++
-
-ifeq ($(OPT_DEBUG),opt)
-#
-# Use this with GNU 4.7X and later
-CXX_COMPILE = $(CXX) -Ofast -msse4.1 -finline-functions -finline-limit=10000 -std=c++11 -openmp
-#CXX_COMPILE = $(CXX) -O3 -msse4.1 -finline-functions -finline-limit=10000 -std=c++0x -openmp
-##CXX_COMPILE = $(CXX) -O3 -msse4.1  -ansi-alias -std=c++0x
-## inline flags...
-#CXX_COMPILE = $(CXX) -O3 -msse4.1  -finline-functions -finline-limit=10000 -ansi-alias -std=c++0x
-## inline flags + others...
-##CXX_COMPILE = $(CXX) -O3 -msse4.1  -finline-functions -finline-limit=10000 -fomit-frame-pointer -minline-all-stringops -malign-double -ftree-vectorize -floop-block -ansi-alias -std=c++0x -openmp
-##CXX_COMPILE = $(CXX) -O3 -msse4.1  -finline-functions -finline-limit=10000 -fomit-frame-pointer -malign-double -ftree-vectorize -floop-block -ansi-alias -std=c++0x
-LDFLAGS	=
-endif
-
-ifeq ($(OPT_DEBUG),debug)
-CXX_COMPILE = $(CXX) -g -O0 -std=c++0x -openmp
-LDFLAGS	=
-endif
-
-CXXFLAGS 	= -DLCALS_PLATFORM_X86_SSE -DLCALS_COMPILER_GNU
-LDPATH		=
-
-endif 
-
-
-#
-#  INTEL COMPILER (AVX 2)
-# 
-ifeq ($(LCALS_ARCH),x86_avx_icc)
-#CXX 		= /usr/local/tools/icc-12.1.339/bin/icpc
-#CXX 		= /usr/local/tools/ic-13.0.117/bin/icpc
-#CXX 		= /usr/local/tools/ic-13.0.146/bin/icpc
-#CXX 		= /usr/local/tools/ic-13.1.163/bin/icpc
-#CXX 		= /usr/local/tools/ic-14.0.080/bin/icpc
-#CXX 		= /usr/local/tools/ic-14.0.097/bin/icpc
-CXX 		= /usr/local/tools/ic-14.0.106/bin/icpc
-
-ifeq ($(OPT_DEBUG),opt)
-#CXX_COMPILE = $(CXX) -O3 -mavx -inline-max-total-size=10000 -inline-forceinline -opt-streaming-stores always -ansi-alias -std=c++0x -openmp
-#CXX_COMPILE = $(CXX) -O3 -mavx -inline-max-total-size=10000 -inline-forceinline -ansi-alias -std=c++0x -openmp -static-intel
-CXX_COMPILE = $(CXX) -O3 -mavx -inline-max-total-size=10000 -inline-forceinline -ansi-alias -std=c++0x -openmp
-#CXX_COMPILE = $(CXX) -O3 -mavx -inline-max-total-size=10000 -inline-forceinline -ansi-alias -std=c++0x 
-LDFLAGS	=
-endif
-
-ifeq ($(OPT_DEBUG),debug)
-CXX_COMPILE = $(CXX) -g -O0 -std=c++0x -openmp
-LDFLAGS	=
-endif
-
-CXXFLAGS 	= -DLCALS_PLATFORM_X86_AVX -DLCALS_COMPILER_ICC
-LDPATH		=
-
-endif
-
-
-#
-#  GNU COMPILER (AVX 2)
-# 
-ifeq ($(LCALS_ARCH),x86_avx_gnu)
-#CXX 		= /usr/local/bin/g++-4.6.1
-#CXX 		= /usr/apps/gnu/4.7.1/bin/g++
-#CXX 		= /usr/apps/gnu/4.8.0/bin/g++
-
-ifeq ($(OPT_DEBUG),opt)
-#
-# Use this with GNU 4.7X and later
-CXX_COMPILE = $(CXX) -Ofast -mavx -finline-functions -finline-limit=10000 -std=c++11 -openmp
-#
-# These should work with older compiler versions...
-#CXX_COMPILE = $(CXX) -O3 -mavx -ansi-alias -std=c++0x -openmp
-#CXX_COMPILE = $(CXX) -O3 -mavx -std=c++0x
-##CXX_COMPILE = $(CXX) -O3 -mavx -ansi-alias -std=c++0x
-##CXX_COMPILE = $(CXX) -O3 -mavx -finline-functions -finline-limit=10000 -fomit-frame-pointer -malign-double -ftree-vectorize -floop-block -ansi-alias -std=c++0x
-LDFLAGS	=
-endif
-
-ifeq ($(OPT_DEBUG),debug)
-CXX_COMPILE = $(CXX) -g -O0 -std=c++0x -openmp
-LDFLAGS	=
-endif
-
-CXXFLAGS 	= -DLCALS_PLATFORM_X86_AVX -DLCALS_COMPILER_GNU
-LDPATH		=
-
-endif
-
-
-#
-#  XLC 9 COMPILER  (BG/P)
-# 
-ifeq ($(LCALS_ARCH),bgp_xlc9)
-##
-## Other options to try "-O4 -qhot=level=0", "-qhot=vector -qhot=simd" 
-##                                           (automatic woth -O4 or -O5) 
-##
-CXX 		= mpixlcxx
-
-ifeq ($(OPT_DEBUG),opt)
-CXX_COMPILE = $(CXX) -O3 -qarch=450d -qtune=450 -qalias=allp -qhot -qsmp=omp
-LDFLAGS	= -O3 -Wl,--relax -qsmp=omp -qnostaticlink -export-dynamic -Wl,--relax
-##CXX_COMPILE = $(CXX) -O3 -qarch=450d -qtune=450 -qalias=allp -qhot 
-##LDFLAGS	= -O3 -Wl,--relax  -qnostaticlink -export-dynamic -Wl,--relax
-endif
-
-ifeq ($(OPT_DEBUG),debug)
-CXX_COMPILE = $(CXX) -g -O0 -qarch=450d -qtune=450 -qalias=allp -qsmp=omp
-LDFLAGS	= -g -O0 -Wl,--relax -qsmp=omp -qnostaticlink -export-dynamic -Wl,--relax
-endif
-
-CXXFLAGS 	= -DLCALS_PLATFORM_BGP -DLCALS_COMPILER_XLC9 -I/usr/gapps/bdiv/sles_10_ppc64/opt/platform/include
-LDPATH		= -L/usr/local/tools/lib
-
-endif
-
-
-#
-#  XLC 12 COMPILER  (BG/Q)
-# 
-ifeq ($(LCALS_ARCH),bgq_xlc12)
-#CXX 		= /usr/local/tools/compilers/ibm/bgxlc++-12.1.0.2a
-#CXX 		= /usr/local/tools/compilers/ibm/bgxlc++-12.1.0.3
-CXX 		= mpixlcxx_r
-#CXX 		= /usr/local/tools/compilers/ibm/mpixlcxx-12.1.0.1d
-#CXX 		= /usr/local/tools/compilers/ibm/mpixlcxx-12.1.0.2
-#CXX 		= /usr/local/tools/compilers/ibm/mpixlcxx-12.1.0.3
-
-ifeq ($(OPT_DEBUG),opt)
-#CXX_COMPILE = $(CXX) -O3 -qarch=qp -qhot=novector -qsimd=auto -qlanglvl=extended0x -qstrict -qinline=10000 -qsmp=omp
-CXX_COMPILE = $(CXX) -O3 -qarch=qp -qhot=novector -qsimd=auto -qlanglvl=extended0x -qnostrict -qinline=10000 -qsmp=omp
-##
-## USE THESE LINE TO GENERATE VECTORIZATION REPORT INFO...
-#CXX_COMPILE = $(CXX) -O3 -qarch=qp -qhot=novector -qsimd=auto -qlanglvl=extended0x -qstrict -qinline=10000  -qlist -qsource -qlistopt -qreport
-#CXX_COMPILE = $(CXX) -O3 -qarch=qp -qhot=novector -qsimd=auto -qlanglvl=extended0x -qnostrict -qinline=10000  -qlist -qsource -qlistopt -qreport
-#CXX_COMPILE = $(CXX) -O3 -qarch=qp -qhot=novector -qsimd=auto -qlanglvl=extended0x -qinline=100 -qlistfmt=html=inlines
-LDFLAGS	= 
-endif
-
-ifeq ($(OPT_DEBUG),debug)
-CXX_COMPILE = $(CXX) -g -O0 -qarch=qp -qlanglvl=extended0x -qsmp=omp
-LDFLAGS	= 
-endif
-
-CXXFLAGS 	= -DLCALS_PLATFORM_BGQ -DLCALS_COMPILER_XLC12
-LDPATH		=
-
-endif
-
-
-#
-#  Clang C++ compiler for BG/Q
+#  Clang C++ compiler
 # 
 ifeq ($(LCALS_ARCH),bgq_clang)
 #CXX 		= /usr/apps/gnu/clang/bin/mpiclang++11
@@ -285,7 +54,9 @@ ifeq ($(LCALS_ARCH),bgq_clang)
 #CXX             = /usr/apps/gnu/clang/r189357-20130827/bin/bgclang++11
 #CXX             = /usr/apps/gnu/clang/r190771-20130914/bin/bgclang++11
 #CXX             = /usr/apps/gnu/clang/r192411-20131010/bin/bgclang++11
-CXX             = clang++
+CXX             = clang++-14 --std=c++14
+OPT             = opt-14
+
 
 
 ifeq ($(OPT_DEBUG),opt)
@@ -312,31 +83,6 @@ LDPATH		=
 endif 
 
 
-#
-#  GNU compiler for BG/Q
-#
-ifeq ($(LCALS_ARCH),bgq_gnu)
-#CXX             = /bgsys/drivers/ppcfloor/gnu-linux/powerpc64-bgq-linux/bin/g++
-CXX             = /usr/local/tools/compilers/ibm/mpicxx-4.7.2
-
-#Previous versions
-
-ifeq ($(OPT_DEBUG),opt)
-CXX_COMPILE = $(CXX) -O3 -finline-functions -finline-limit=10000 -std=c++0x -fopenmp
-
-LDFLAGS =
-endif
-
-ifeq ($(OPT_DEBUG),debug)
-CXX_COMPILE = $(CXX) -g -O0 -std=c++0x -openmp
-LDFLAGS =
-endif
-
-CXXFLAGS        = -DLCALS_PLATFORM_BGQ -DLCALS_COMPILER_GNU
-LDPATH          =
-
-endif
-
 OBJS := $(patsubst %.cxx,%.o,$(wildcard ./*.cxx))
 
 ifdef BUILD_MISC
@@ -357,10 +103,20 @@ lcals: $(OBJFILES)
 	"CXX_COMPILE      info   $(CXX_COMPILE)"                  \
 	"CXX_FLAGS_BUILD  info   $(CXX_FLAGS_BUILD)"              \
 	"LDFLAGS          info   $(LDFLAGS)"
-	$(CXX_COMPILE) $(OBJFILES) $(LDFLAGS) $(LDPATH) -o  $@.exe
+	$(CXX_COMPILE) $(OBJFILES) $(LDFLAGS) $(LDPATH) -o  $@
 
-## Uncomment this line to generate an executable to run...
-%.o : %.cxx ; $(CXX_COMPILE) -c -o $@ $< $(CXX_FLAGS_BUILD)
+# Uncomment this line to generate an executable to run...
+%.o : %.cxx 
+	# $(CXX_COMPILE) -c -o $@ $< $(CXX_FLAGS_BUILD)
+	$(CXX) -S -c -emit-llvm -o $*.bc $< $(CXX_FLAGS_BUILD)
+	$(OPT) -enable-new-pm=0 $(OPTFLAGS) -S -o $*.ll $*.bc
+	$(CXX) -c -o $@ $*.ll
+
+run: 
+	./lcals
+
+size: 
+	du lcals
 
 ## The following can be used to generate vectorization report and 
 ## assmbly code output for Intel compilers...
